--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,4 +1,5 @@
-.add-cart-btn{
+.add-cart-btn,
+.grey-btn {
   border-radius: 4px;
   background: #696969;
   color: white;
@@ -12,6 +13,7 @@
     // box-shadow:
   }
 }
-.submit-button{
+.submit-button {
   text-align: center;
 }
+
