finished styling order summary part of cart

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,10 +10,13 @@
   width: 250px;
   &:hover{
     color: white;
-    // box-shadow:
   }
 }
 .submit-button {
   text-align: center;
+}
+
+.order-summary .grey-btn {
+  width: 100%;
 }
 
