--- a/app/assets/stylesheets/pages/_cart.scss
+++ b/app/assets/stylesheets/pages/_cart.scss
@@ -1,3 +1,34 @@
+.title-points {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  h1 {
+    font-size: 32px;
+    font-weight: 600;
+  }
+  p {
+    font-family: $poppins;
+  }
+}
+
+.continue-shopping a {
+  display: block;
+  width: 185px;
+  font-family: $poppins;
+  color: black;
+  display: flex;
+  align-items: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
+  &:hover {
+    text-decoration: none;
+  }
+  p {
+    margin-bottom: 0;
+    margin-left: 16px;
+  }
+}
+
 .product-list-order-summary {
   display: flex;
   justify-content: space-between;
@@ -16,6 +47,7 @@
 
 .order-summary {
   width: 500px;
+  height: 515px;
   h2 {
   font-size: 32px;
   font-weight: 400;
