adapted styling to mobile and tablets

--- a/app/assets/stylesheets/pages/_cart.scss
+++ b/app/assets/stylesheets/pages/_cart.scss
@@ -111,3 +111,19 @@
   }
 }
 
+@media (max-width: 1024px) {
+  .product-list-order-summary {
+    flex-direction: column;
+  }
+
+  .title-points {
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
+  }
+
+  .order-summary {
+    width: 100%;
+  }
+}
+
