--- a/app/assets/stylesheets/components/_line-item-card-cart.scss
+++ b/app/assets/stylesheets/components/_line-item-card-cart.scss
@@ -34,3 +34,15 @@
     font-family: $pt-serif;
   }
 }
+
+@media (max-width: 1024px) {
+  .line-item-card img {
+    width: 95px;
+    height: 120px;
+    margin-right: 12px;
+  }
+
+  .product-info {
+    margin-right: 40px;
+  }
+}
