--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -12,7 +12,7 @@
   </div>
 
   <div class="product-list-order-summary">
-    <div class="product-list">
+    <div class="cart-product-list">
       <% if @cart.line_items.length == 0 %>
         <p>Your cart is empty</p>
       <% else %>
