--- a/app/views/merchants/inventory.html.erb
+++ b/app/views/merchants/inventory.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <div>
+<div class="content">
+  <div class="header-inventory">
     <form method="get" action="/inventory">
       <div>
         <!-- <span class="iconify" data-icon="ei:search" data-inline="false"></span> -->
@@ -8,7 +8,7 @@
     </form>
     <%= link_to 'Add Product', new_product_path, class: 'add-cart-btn form-btn' %>
   </div>
-  <div class="product-list">
+  <div class="product-list product-inventory">
     <% @products.each do |product| %>
       <div class="product-card">
         <div class="product-img" style ="background-image: url(<%= cl_image_path product.photos[0].key %>)">
