--- a/app/views/merchants/inventory.html.erb
+++ b/app/views/merchants/inventory.html.erb
@@ -1,8 +1,8 @@
 <div class="content">
   <div class="header-inventory">
     <form method="get" action="/inventory">
-      <div>
-        <!-- <span class="iconify" data-icon="ei:search" data-inline="false"></span> -->
+      <div class="search-input">
+        <span class="iconify" data-icon="ei:search" data-inline="false"></span>
         <input type="text" value="<%= @keyword %>" name="search">
       </div>
     </form>
@@ -25,7 +25,7 @@
             <% end %>
               <h4><%= @category.name %></h4>
           </div>
-          <div>
+          <div class="product-stock">
             <p>Stock</p>
             <% total = 0 %>
             <% product.product_variants.each { |variant| p total += variant.stock_qty.to_i } %>
